Undo: Fixed margin for social links on mobile screen.

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -39,8 +39,6 @@ footer {
         @include span-columns($grid-columns);
         @include justify-content(center);
         text-align: center;
-        margin-left: 0;
-        margin-right: 0;
     }
     @include media($medium-screen-up) {
         @include span-columns($two-thirds-grid-columns);
